# jetblack-lvm2

./: .gitignore  README.md  pyproject.toml
examples/: example.py
jetblack_lvm2/: __init__.py  bindings.py  exceptions.py  logical_volume.py  lvm.py  physical_volume.py  types.py  utils.py  volume_group.py
