[tool.poetry]
name = "jetblack-lvm2"
version = "0.1.0"
description = "Python 3 bindings for lvm2"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "jetblack_lvm2" }
]
repository = "https://github.com/rob-blackbourn/jetblack-lvm2"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
mypy = "^0.740.0"
rope = "^0.14.0"
mkdocs = "^1.0.4"
mkdocs-material = "^4.6.0"
jetblack-markdown = "^0.4"
autopep8 = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"